plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.java-gi:gtk:0.13.0'
    implementation 'io.github.jwharm.cairobindings:cairo:1.18.4.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.named('run') {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

application {
    mainClass = "io.github.jwharm.javagi.examples.mediastream.Animation"
}

